# ChapterhouseDB

./: .dockerignore  .gitignore  Cargo.toml  DEV_NOTES.md  DEV_NOTES.ms  Dockerfile  README.md  ]  docker-compose.yml  example-node.Dockerfile
sample_queries/: edge_cast_query.sql  huge_simple.sql  large_simple.sql  only_wide_strings_query.sql  simple-error-case.sql  simple.sql  simple_order_by.sql
src/: lexer.rs  lib.rs  main.rs
src/ast/: ast.rs
src/client/: async_query_client.rs  mod.rs  query_client.rs  query_data_iterator.rs  tui_query_data_iterator.rs
src/config/: mod.rs  worker.rs
src/handlers/: mod.rs
src/handlers/exchange_handlers/: mod.rs
src/handlers/exchange_handlers/heartbeat_handler/: heartbeat_handler.rs  mod.rs
src/handlers/exchange_handlers/record_handler/: drop_cancellation_token.rs  mod.rs  record_handler.rs  transaction_record_handler.rs
src/handlers/exchange_handlers/record_heartbeat_handler/: mod.rs  record_heartbeat_handler.rs
src/handlers/exchange_handlers/transaction_heartbeat_handler/: mod.rs  transaction_heartbeat_handler.rs
src/handlers/memory_handler/: memory_handler.rs  mod.rs
src/handlers/message_handler/: comms.rs  connection.rs  connection_pool_handler.rs  inbound_connection_pool_handler.rs  message_handler.rs  message_registry.rs  messages.rs  mod.rs  outbound_connection_pool_handler.rs  test_messages.rs
src/handlers/message_handler/messages/: common.rs  exchange.rs  message.rs  mod.rs  operator.rs  parsing_utils.rs  query.rs
src/handlers/message_router_handler/: message_router_handler.rs  message_subscriber.rs  mod.rs
src/handlers/operator_handler/: conversions.rs  mod.rs  operator_handler.rs  operator_handler_state.rs
src/handlers/operator_handler/operators/: builder.rs  common_message_handlers.rs  connection_registry.rs  conversions.rs  exchange_operator.rs  exchange_operator_test.rs  mod.rs  operator_builder.rs  operator_task_builder.rs  operator_task_registry.rs  operator_task_trackers.rs  producer_operator.rs  producer_operator_handler.rs  table_func_producer_operator.rs  traits.rs
src/handlers/operator_handler/operators/filter_tasks/: config.rs  conversions.rs  filter_task.rs  mod.rs
src/handlers/operator_handler/operators/materialize_tasks/: config.rs  conversions.rs  materialize_files_task.rs  mod.rs
src/handlers/query_handler/: mod.rs  query_data_handler.rs  query_handler.rs  query_handler_state.rs
src/lexer/: builder.rs  lex.rs  test_lex.rs  utils.rs
src/messenger/: message_registry.rs  messages.rs  messenger.rs  mod.rs  test_messages.rs
src/parser/: parser.rs
src/planner/: logical_planner.rs  mod.rs  physical_planner.rs  planner.rs  test_logical_planner.rs  test_physical_planner.rs  test_sqlparser_behavior.rs
src/planner/example_plans/: build_order_by_physical_plan_1.json
src/tui/: common_args.rs  mod.rs  record_table.rs
src/worker/: mod.rs  query_worker.rs
worker_configs/: fs_worker_config.json  fs_worker_config_node1.json  fs_worker_config_node2.json  s3_worker_config.json
(+48 files in other folders)
