[package]
name = "chapterhouseqe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "scratch_main"
path = "src/bin/scratch_main.rs"

[dependencies]
bytes = "1.9"
unicode-segmentation = "1.12.0"
thiserror = "1.0.65"
anyhow = { version = "1.0.91", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.52.0", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full", "net"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }
