[package]
name = "chapterhouseqe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "scratch_main"
path = "src/bin/scratch_main.rs"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.52.0", features = ["serde"] }
thiserror = "1.0.65"
tokio = { version = "1.42.0", features = ["full", "net"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1.12.0"
uuid = { version = "1.11", features = ["v4"] }

