[package]
name = "chapterhouseqe"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3  # Optimize for binary size; use "3" for speed
lto = "fat"       # Enable Link-Time Optimization
codegen-units = 1 # Reduce parallel code generation for better optimization
debug = false    # Disable debug information

[profile.docker-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
debug = false

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "scratch_main"
path = "src/bin/scratch_main.rs"

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.52.0", features = ["serde"] }
thiserror = "1.0.65"
tokio = { version = "1.42.0", features = ["full", "net"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1.12.0"
uuid = { version = "1.11", features = ["v4"] }
opendal = { version = "0.51.2", features = ["services-fs", "services-s3"] }
futures = { version = "0.3" }
tempdir = { version = "0.3" }
globset = { version = "0.4" }
parquet = { version = "53.1", features = ["async", "arrow"] }
arrow = { version = "53.1", features = ["prettyprint"] }
parquet_opendal = { version = "0.2" }
rand = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
ratatui = { version = "0.28.0" }
crossterm = { version = "0.28.1" }
regex = { version = "1.11.1" }
